--- a/packages/web/components.json
+++ b/packages/web/components.json
@@ -1,10 +1,10 @@
 {
   "$schema": "https://shadcn-vue.com/schema.json",
-  "style": "default",
+  "style": "new-york",
   "typescript": true,
   "tailwind": {
     "config": "",
-    "css": "src/styles/ui.css",
+    "css": "src/styles/shadcn.css",
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
