--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^11.0.1",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/vue-table": "^8.21.3",
     "@vueuse/core": "^14.1.0",
     "@vueuse/router": "^14.1.0",
     "class-variance-authority": "^0.7.1",
