--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:web": "pnpm --filter ./packages/web build"
   },
   "keywords": [],
   "author": "",
